# cronopete

./: .gitignore  BUILD.txt  CMakeLists.txt  HISTORY.md  Makefile  PKGBUILD  README  README.md  about.ui  backup.vala  choose.vala  chooser.ui  cronopete.anjuta  cronopete.avprj  cronopete.vala  cronopete.vide  cronopete3.desktop  cronopete_preferences  cronopete_preferences.desktop  cronopete_restore.desktop  folder_selector.ui  folders.ui  format.ui  format_allow.ui  format_error.ui  format_fat.ui  formatting.ui  icons_widget.vala  main.ui  main.vala  menu.vala  meson.build  meson_options.txt  nanockup.vala  nanockup.vide  options.ui  options.vala  org.gnome.cronopete.gschema.xml  restore.vala  switch_widget.vala  (+3 more)
cmake/: ValaPrecompile.cmake  ValaVersion.cmake  meson.build
data/: CMakeLists.txt  com.backup.cronopete.service.base  cronopete.desktop  cronopete.gschema.xml  cronopete.plug  cronopete_preferences.desktop  cronopete_restore.desktop  cronopete_restore.sh  org.rastersoft.cronopete.gschema.xml  org.rastersoft.cronopete2.gschema.xml
data/dbus/: CMakeLists.txt  com.rastersoft.cronopete.service.base
data/icon_generator/: gensvg.py
data/icons/: CMakeLists.txt
data/interface/: CMakeLists.txt  about.ui  backend_chooser.ui  chooser.ui  config_exported.ui  folder_selector.ui  format_error.ui  format_force.ui  formatting.ui  generic_error.ui  main.ui  nodisk.ui  options.ui  restore_error.ui  restore_ok.ui  restoring.ui  warning_folder_backend.ui  welcome.ui
data/interface2/: CMakeLists.txt  chooser.ui  config_exported.ui  main.ui  restore_ok.ui  welcome.ui
data/interface3/: about.ui  chooser.ui  config_exported.ui  format_error.ui  formatting.ui  main.ui  restore_ok.ui  restoring.ui
data/local/: CMakeLists.txt  cronopete
data/pixmaps/: CMakeLists.txt  gensvg.py
debian/: changelog  control  postinst  rules
debian_gtk2/: changelog  control  rules
doc/: CMakeLists.txt  README.html  gpl.html
interface/: about.ui  chooser.ui  folder_selector.ui  format_error.ui  format_force.ui  formatting.ui  main.ui  options.ui  restore_error.ui  restore_ok.ui  restoring.ui
interface3/: about.ui  chooser.ui  folder_selector.ui  format_error.ui  format_force.ui  formatting.ui  main.ui  options.ui  restore_ok.ui  restoring.ui
meson_scripts/: install_data.sh
po/: CMakeLists.txt  LINGUAS  POTFILES.in  cronopete.pot  cs.po  de.po  es.mo  es.po  fr.po  gl.mo  gl.po  meson.build  ru.po  untitled.pot  update_mo_files  update_po_files
rpmbuild/SPECS/: cronopete.spec
src/: CMakeLists.txt  Config.vala.cmake  backup.vala  backup_base.vala  backup_folder.vala  backup_rsync.vala  choose.vala  choose_disk.vala  cronopete.vala  cronopete_preferences  cronopete_restore  dates.vala  error_window.vala  fixedlabel.vala  helpers.vala  icons_widget.vala  ipc.vala  menu.vala  meson.build  options.vala  restore.vala  restore_canvas.vala  switch_widget.vala  udisk2_cronopete.vala  usbhd_backend.vala
ubuntu/: changelog  control  copyright
